--- a/aside.html
+++ b/aside.html
@@ -6,5 +6,8 @@
 	</label>
 	<br><br>
 	<h2>Tamaño de letra</h2>
-	<input type="number" name="">	
+	<select name="letra" id="letra" style="font-size: 1.25rem;">
+		<option value="">Normal</option>
+		<option value="" style="font-size: 1.75rem;">Grande</option>
+	</select>
 </div>
