--- a/menu.html
+++ b/menu.html
@@ -52,14 +52,14 @@ input {
 			<img src="../img/chat.png" alt="chat"><br>
 			<span class="iconotext">Mensajes</span>
 		</a>
-		<a href="publicacion.php" class="icono">
+		<a href="publicacion/lista.php" class="icono">
 			<img src="../img/publicacion.png" alt="publicacion"><br>
 			<span class="iconotext">Publica<br>ci&oacute;n</span>
 		</a>
-		<a href="cuenta.php" class="icono" style="margin-right: 15px;">
+		<a href="usuario/cuenta.php" class="icono" style="margin-right: 15px;">
 			<img src="../img/cuenta.png"  alt="cuenta"><br>
 			<span class="iconotext">Cuenta</span>
 		</a>
-		<a href="index.php">Cerrar Sesi&oacute;n</a>  
+		
 	</div>
 </div>
