--- a/header.html
+++ b/header.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimun-scale=1">
+	<script type="text/javascript" src="js/titulo.js"></script>
 	<script type="text/javascript" src="../js/titulo.js"></script>
+	<script type="text/javascript" src="../../js/titulo.js"></script>
 </head>
 <body onload = "titulo();">
 
